<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_headphone_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_headphone_state" />

        <TextView
            android:id="@+id/text_weather"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_weather" />

        <TextView
            android:id="@+id/text_places"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_places" />

        <TextView
            android:id="@+id/text_user_activity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_user_activity" />

        <TextView
            android:id="@+id/text_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_location" />

        <TextView
            android:id="@+id/text_beacons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_beacons" />

        <TextView
            android:id="@+id/text_headphone_fence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_headphone_fence" />

        <TextView
            android:id="@+id/text_detected_activity_fence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_detected_activity_fence" />

        <TextView
            android:id="@+id/text_location_fence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_location_fence" />

        <TextView
            android:id="@+id/text_time_fence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_time_fence" />

        <TextView
            android:id="@+id/text_beacon_fence"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/text_beacon_fence" />

    </LinearLayout>

</ScrollView>